<resources>
    <string name="app_name">QMC</string>
    <string name="app_name_long">Quick Money Counter</string>

    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>

    <string name="no_money" translatable="false">0.00</string>
    <string name="title_paper_common">Paper Common</string>
    <string name="title_paper_uncommon">Paper Uncommon</string>
    <string name="title_coin">Coins</string>

    <string name="button_reset">Reset</string>
    <string name="confirm_reset_title">Confirm Reset</string>
    <string name="confirm_reset_message">Are you sure you would like to reset the count?</string>
    <string name="confirm_reset_cancelled">Reset cancelled</string>

    <string name="button_undo">Undo</string>
    <string name="undo_success">Undone</string>
    <string name="undo_fail">Nothing to undo!</string>

    <string name="settings">Settings</string>
    <string name="settings_currency">Currency</string>
    <string name="settings_mode">Mode</string>
    <string name="settings_confirm_reset">Ask for confirmation on reset</string>
    <string name="settings_about">by itsmaxymoo</string>

    <string name="advanced_amount_hint">Amount</string>
    <string name="advanced_plus" translatable="false">+</string>
    <string name="advanced_minus" translatable="false">-</string>

    <string name="eula_title">End User License Agreement</string>
    <string name="eula_checkbox">I agree to the above terms</string>
    <string name="eula_decline">Decline</string>
    <string name="eula_text" translatable="false">THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
        EXPRESS OR IMPLIED,
        INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
        NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
        SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
    </string>
</resources>
