<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelTitle" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:text="@string/app_name_long" android:textSize="36sp" android:textAlignment="center"/>
    <TextView
            android:text="@string/settings_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelMode" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/labelTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="24sp"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rgMode"
            app:layout_constraintTop_toBottomOf="@+id/labelMode" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/settings_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelCurrency"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="24sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/rgMode"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerCurrency" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/labelCurrency" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <CheckBox
            android:text="@string/settings_confirm_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxConfirmReset" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCurrency" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/settings_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelAbout" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
</android.support.constraint.ConstraintLayout>